fix(cta-block): remove extra padding for the cta block and cta section

--- a/packages/web-components/src/components/cta-block/cta-block.scss
+++ b/packages/web-components/src/components/cta-block/cta-block.scss
@@ -18,9 +18,6 @@
       padding-left: $carbon--layout-01;
       padding-right: $carbon--layout-01;
     }
-    @include carbon--breakpoint('md') {
-      padding-right: 0;
-    }
     ::slotted([slot]) {
       margin-left: 0;
       margin-right: 0;
